assets/css/common/main.css
/* for home and other pages */
.main {
    position: relative;
    min-height: calc(100vh - var(--header-height) - var(--footer-height));
    max-width: calc(var(--main-width) + var(--gap) * 2);
    margin: auto;
    padding: var(--gap);
    padding-bottom: 0;
    background-color: var(--entry);
}

.mark-line {
    display: inline-block;
    background: var(--line-yellow) bottom left/100% 0.3em no-repeat;
}

mark {
    margin: 0 -0.4em;
    padding: 0.1em 0.4em;
    border-radius: 0.8em 0.3em;
    background: transparent;
    background-image: linear-gradient(to right,
            rgba(255, 225, 0, 0.1),
            rgba(255, 225, 0, 0.7) 4%,
            rgba(255, 225, 0, 0.3));
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
}

.entry-header h6 {
    margin-left: 1.5em;
}

/* for post page */
.main.post {
    max-width: calc(var(--post-width) + var(--gap) * 2);
}

.page-header h1 {
    font-size: 40px;
}

.pagination {
    display: flex;
}

.pagination a {
    color: var(--theme);
    font-size: 13px;
    line-height: 36px;
    background: var(--primary);
    border-radius: calc(36px / 2);
    padding: 0 16px;
}

.pagination .next {
    margin-inline-start: auto;
}

.social-icons {
    padding: 12px 0;
}

.social-icons a {
    display: inline-block;
    line-height: 20px;
    transition: var(--link-transition);
}

.social-icons a:not(:last-of-type) {
    margin-right: 12px;
}

.social-icons a svg {
    height: 26px;
    width: 26px;
}

.social-icons a:hover {
    color: var(--link-hover-color);
    box-shadow: var(--link-hover-underline-shadow);
}

code {
    direction: ltr;
}

div.highlight,
pre {
    position: relative;
}

.copy-code {
    display: none;
    position: absolute;
    top: 4px;
    right: 4px;
    color: rgba(255, 255, 255, 0.8);
    background: rgba(78, 78, 78, 0.8);
    border-radius: var(--radius);
    padding: 0 5px;
    font-size: 14px;
    user-select: none;
}

div.highlight:hover .copy-code,
pre:hover .copy-code {
    display: block;
}

.meta-item {
    display: inline-block;
}

.meta-item * {
    color: var(--secondary);
}

.meta-item:not(:last-of-type):after {
    content: "·";
    margin-inline-start: .5em;
    margin-inline-end: .5em;
}

.meta-item svg {
    width: 1em;
    height: 1em;
    display: inline-block;
    vertical-align: -0.15em;
}

.meta-item a {
    transition: var(--link-transition);
}

.meta-item a:hover {
    color: var(--primary);
    box-shadow: 0 1px 0 var(--secondary);
}

.meta-item .post-tags a:not(:last-of-type) {
    margin-inline-end: .3em;
}

.meta-item .post-tags a:not(:last-of-type):after {
    content: ",";
}

.meta-item .post-tags a:before {
    content: "#";
}


/* images */

figure>img {
    image-rendering: -webkit-optimize-contrast;
}

.post-content img {
    image-rendering: -webkit-optimize-contrast;
}


/* effects */
:root {
    --shadow-color: 0deg 0% 0%;
    --shadow-elevation-low:
        0.6px 0.6px 1px hsl(var(--shadow-color) / 0.1),
        0.9px 0.9px 1.4px -1.2px hsl(var(--shadow-color) / 0.1),
        2.2px 2.2px 3.5px -2.5px hsl(var(--shadow-color) / 0.1);
    --shadow-elevation-medium:
        0.6px 0.6px 1px hsl(var(--shadow-color) / 0.11),
        1.8px 1.8px 2.9px -0.8px hsl(var(--shadow-color) / 0.11),
        4.6px 4.6px 7.3px -1.7px hsl(var(--shadow-color) / 0.11),
        11.1px 11.1px 17.7px -2.5px hsl(var(--shadow-color) / 0.11);

    --twitter-color: #4a99e9;
}


/* links page */

.links-container {
    font-size: 16px;
}

.links-container blockquote {
    margin: var(--gap) 0;
    padding: 0 14px;
    border-inline-start: 3px solid var(--primary);
}

.links .item {
    padding: 12px;
    background: var(--entry);
    border-radius: var(--radius);
    margin-bottom: var(--gap);
    border: 1px solid var(--border);
}

.links .favicon {
    display: inline-block;
    background-size: 16px 16px;
    width: 16px;
    height: 16px;
    image-rendering: -webkit-optimize-contrast;
}

.links .item .title .favicon {
    margin-right: calc(var(--gap) / 2);
    vertical-align: middle;
}

.links .item .title a:hover {
    text-decoration: underline;
}

.links .item .description {
    margin-left: calc(16px + var(--gap) / 2);
    color: var(--secondary);
}

.links .item .description .delimiter::after {
    content: "·";
    margin-inline-start: .5em;
    margin-inline-end: .5em;
}

/* shortcodes */

.standout {
    font-size: 24px;
    padding: .5em;
    text-align: center;
}

.image-size-control {
    margin-left: auto;
    margin-right: auto;
}

.image-size-control>img {
    width: inherit;
    height: inherit;
}

/* status.omg embed - overwriting the defaults provided */

div.statuslol {
    background: var(--tertiary-bg) !important;
    display: flex;
    gap: 1em;
    color: #111;
    border-radius: 0.5em;
    padding: 1em;
    margin-top: 1em;
}

div.statuslol:hover {
    transform: scale(1.02);
}

.statuslol p {
    color: var(--primary);
}

.statuslol_time a {
    color: var(--primary) !important;
    opacity: .75 !important;
    font-size: 13px;
}

img.statuslol_emoji {
    max-width: 100em;
    flex: 0 0 1em;
    font-size: 3em;
    padding-right: 0;
}

